<resources>
    <string name="app_name">Android_NanoDegree_ShoeStore</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="incomplete_text">Please enter all fields!</string>
    <string name="logout">logout</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_title">Welcome to our shoe store</string>
    <string name="welcome_description">Capture your item , get info and instantly buy</string>
    <string name="next">Next</string>
    <string name="instructions_title">Welcome to our shoe store instruction</string>
    <string name="instruction_description">Start your journey by clicking start</string>
    <string name="start">Start</string>
    <string name="detail_title">Enter Your show detail here</string>
</resources>